<resources>
    <string name="app_name">The Shoe Store</string>
    <string name="hello_login_fragment">Hello Login fragment</string>
    <string name="hello_welcome_fragment">Hello Welcome fragment</string>
    <string name="hello_instruction_fragment">Hello Instructions fragment</string>
    <string name="hello_show_list_fragment">Hello Show List fragment</string>
    <string name="hello_show_details_fragment">Hello Shoe Details fragment</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="instructions_label">Instructions</string>
    <string name="welcome_message">This is a sample Android project that contains 5 screens and uses the Navigation libraries, Databinding, Safe-args, and ViewModels. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur dolor dolorem fugit itaque iure nemo, nesciunt nobis perspiciatis possimus praesentium, quibusdam sed similique soluta tempora temporibus voluptatibus. Dolorem, laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores beatae cumque error fugiat, harum incidunt iure laborum molestias nobis optio perspiciatis quas qui, quia recusandae rerum saepe sequi voluptate voluptates.</string>
    <string name="instructions_button">See instructions</string>
    <string name="shoe_list_button">See shoes</string>
    <string name="about_label">About the app</string>
    <string name="instructions_details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at commodi corporis, dicta ea est fugit libero magnam molestiae, nihil obcaecati odit officia placeat repudiandae sed tenetur vel veniam voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis illo nulla porro sunt. Aliquid beatae blanditiis eos harum ipsum, iusto, magnam obcaecati praesentium quae ratione repudiandae, suscipit. Ducimus ea, voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus distinctio dolores hic minima nam vel voluptatum? Ad doloribus eos ex fuga in itaque laudantium maiores molestiae officia pariatur, quo.</string>
</resources>
